--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <h1>UpBeat City Music🎵</h1>
+    <h2>Who we are</h2>
     <script src="app.js"></script>
   </body>
 </html>
